progress on about page and colors.

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,18 +1,18 @@
 <div class="navigation">
   <nav class="navigation__container">
-    <a class="navigation__item navigation__item--active navigation__item--one" href="/" data-gify="hawaiian" data-link-var="home-link">
+    <a class="navigation__item navigation__item--one {% if page.url == '/' %}navigation__item--active{% endif %}" href="/" data-gify="hawaiian" data-link-var="home-link">
       <div class="navigation__text">Home</div>
     </a>
-    <a class="navigation__item navigation__item--two" href="/about" data-gify="look-at-me" data-link-var="about-link">
+    <a class="navigation__item navigation__item--two {% if page.url contains '/about' %}navigation__item--active{% endif %}" href="/about" data-gify="rick-and-morty" data-link-var="about-link">
       <div class="navigation__text">About</div>
     </a>
-    <a class="navigation__item navigation__item--three" href="/portfolio" data-gify="mind-blown" data-link-var="port-link">
+    <a class="navigation__item navigation__item--three {% if page.url contains '/portfolio' %}navigation__item--active{% endif %}" href="/portfolio" data-gify="mind-blown" data-link-var="port-link">
       <div class="navigation__text" >Portfolio</DIV>
     </a>
-    <a class="navigation__item navigation__item--four" href="/lab" data-gify="trippy" data-link-var="lab-link">
+    <a class="navigation__item navigation__item--four {% if page.url contains '/lab' %}navigation__item--active{% endif %}" href="/lab" data-gify="trippy" data-link-var="lab-link">
       <div class="navigation__text" href="/lab">Lab</div>
     </a>
-    <a class="navigation__item navigation__item--five" href="/contact" data-gify="call-me" data-link-var="contact-link">
+    <a class="navigation__item navigation__item--five {% if ipage.url contains '/contact' %}navigation__item--active{% endif %}" href="/contact" data-gify="call-me" data-link-var="contact-link">
       <div class="navigation__text">Contact Me</div>
     </a>
     <div class="navigation__line"></div>
