--- a/assets/_sass/base/_fonts.scss
+++ b/assets/_sass/base/_fonts.scss
@@ -89,8 +89,8 @@ p {
   line-height: 1;
 }
 
-.font-yellow {
-  color: $color-yellow;
+.font-green {
+  color: $color-green;
 }
 .font-white {
   color: $color-white;
