--- a/assets/_sass/settings/_variables.scss
+++ b/assets/_sass/settings/_variables.scss
@@ -50,7 +50,7 @@
 
 
 
-$font-heading: 'HKGrotesk', sans-serif;
+$font-heading: 'HKGrotesk-bold', sans-serif;
 $font-body: 'HKGrotesk-regular', sans-serif;
 
 
@@ -68,7 +68,7 @@ $--step-up-4: 50px;
 $--step-up-3: 38px;
 $--step-up-2: 29px;
 $--step-up-1: 22px;
-$--baseline: 15px;
+$--baseline: 18px;
 $--step-down-1: 15px;
 $--step-down-2: 14px;
 $--step-down-3: 12px;
@@ -79,7 +79,7 @@ $color-white: #fff;
 $color-black: #181818;
 $color-dark-black: #0B0B0C;
 $color-gray: #4b4b4b;
-$color-yellow: #27ae60;
+$color-green: cyan;
 
 
 $space-horizontal-large: 30px;
