--- a/assets/_sass/components/_navigation.scss
+++ b/assets/_sass/components/_navigation.scss
@@ -17,7 +17,7 @@
       content: '';
       position: absolute;
       top: 0;
-      background-color: $color-gray;
+      background-color: hotpink;
       width: 100%;
       min-width: calc(250px * 5);
       height: 4px;
@@ -66,10 +66,13 @@
       }
     }
     &--active {
-      color: $color-white;
+      color: cyan;
+      ~ .navigation__line {
+        left: var(--about-link);
+      }
     }
     &:hover, &:focus {
-      color: $color-white;
+      color: cyan;
       font-size: 25px;
       border: none;
       outline: none;
@@ -84,7 +87,7 @@
     min-width: 250px;
     margin: 0;
     border-radius: 100px;
-    background: $color-yellow;
+    background: $color-green;
     z-index: 3;
     transition: .3s ease-in-out;
   }
