--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,7 @@ table { border-collapse: collapse; border-spacing: 0; }
 
 html { -webkit-text-size-adjust: 100%; }
 
-body { font-family: "HKGrotesk-regular", sans-serif; color: #fff; line-height: 1.3; font-size: 15px; font-weight: normal; letter-spacing: 1px; background-color: #181818; }
+body { font-family: "HKGrotesk-regular", sans-serif; color: #fff; line-height: 1.3; font-size: 18px; font-weight: normal; letter-spacing: 1px; background-color: #181818; }
 
 body.menu-active { overflow-y: hidden; overflow: hidden; }
 
@@ -44,8 +44,10 @@ body.menu-active { overflow-y: hidden; overflow: hidden; }
 
 .main-content { position: relative; width: 100%; height: calc(100vh - 100px); background-color: #181818; }
 
+.tag { border-radius: 139px; padding: 1px 15px; text-transform: uppercase; background: cyan; }
+
 /** Headers */
-h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 { padding: 0 0 8px; font-family: "HKGrotesk", sans-serif; font-weight: bold; text-transform: uppercase; line-height: 1; }
+h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 { padding: 0 0 8px; font-family: "HKGrotesk-bold", sans-serif; font-weight: bold; text-transform: uppercase; line-height: 1; }
 
 h1, .h1 { font-size: 65px; }
 
@@ -69,15 +71,15 @@ h4, .h4 { font-size: 29px; }
 
 @media (max-width: 1070px) { h4, .h4 { font-size: 22px; } }
 
-@media (max-width: 600px) { h4, .h4 { font-size: 15px; } }
+@media (max-width: 600px) { h4, .h4 { font-size: 18px; } }
 
 h5, .h5 { font-size: 22px; }
 
-@media (max-width: 1070px) { h5, .h5 { font-size: 15px; } }
+@media (max-width: 1070px) { h5, .h5 { font-size: 18px; } }
 
 @media (max-width: 600px) { h5, .h5 { font-size: 15px; } }
 
-h6, .h6 { font-size: 15px; }
+h6, .h6 { font-size: 18px; }
 
 @media (max-width: 1070px) { h6, .h6 { font-size: 15px; } }
 
@@ -85,7 +87,7 @@ h6, .h6 { font-size: 15px; }
 
 s p { margin: 0 0 27px; font-size: 1.5em; font-family: "HKGrotesk-regular", sans-serif; font-weight: normal; line-height: 1; }
 
-.font-yellow { color: #27ae60; }
+.font-green { color: cyan; }
 
 .font-white { color: #fff; }
 
@@ -99,13 +101,19 @@ a { text-decoration: none; color: #fff; }
 
 .home-marquee__container { display: -ms-flexbox; display: flex; -ms-flex-direction: column; flex-direction: column; -ms-flex-pack: center; justify-content: center; height: 100%; }
 
+.home-marquee__headline { color: transparent; -webkit-text-stroke: 2px cyan; text-shadow: 5px 10px hotpink; font-size: 50px; }
+
+.home-marquee__headline-a { font-size: 120px; color: transparent; -webkit-text-stroke: 2px cyan; word-break: break-all; }
+
+.home-marquee__subhead { color: transparent; -webkit-text-stroke: 2px hotpink; word-break: break-all; font-size: 10vw; }
+
 .navigation::-webkit-scrollbar { display: none; }
 
 .navigation { position: fixed; bottom: 0; width: 100%; background-color: #0B0B0C; overflow-x: scroll; }
 
 .navigation__container { display: -ms-flexbox; display: flex; position: relative; -ms-flex-direction: row; flex-direction: row; -ms-flex-pack: start; justify-content: flex-start; height: 100px; }
 
-.navigation__container:before { content: ''; position: absolute; top: 0; background-color: #4b4b4b; width: 100%; min-width: calc(250px * 5); height: 4px; z-index: 2; }
+.navigation__container:before { content: ''; position: absolute; top: 0; background-color: hotpink; width: 100%; min-width: calc(250px * 5); height: 4px; z-index: 2; }
 
 .navigation__item { display: -ms-flexbox; display: flex; -ms-flex-direction: column; flex-direction: column; -ms-flex-pack: center; justify-content: center; position: relative; -ms-flex-align: center; align-items: center; width: 20vw; min-width: 250px; font-size: 20px; background-color: #0B0B0C; color: #4b4b4b; text-transform: uppercase; transition: .3s ease-in-out; }
 
@@ -121,10 +129,22 @@ a { text-decoration: none; color: #fff; }
 
 .navigation__item--five:hover ~ .navigation__line { left: var(--contact-link); }
 
-.navigation__item--active { color: #fff; }
+.navigation__item--active { color: cyan; }
 
-.navigation__item:hover, .navigation__item:focus { color: #fff; font-size: 25px; border: none; outline: none; cursor: pointer; }
+.navigation__item--active ~ .navigation__line { left: var(--about-link); }
 
-.navigation__line { position: absolute; left: -20vw; height: 3px; width: 20vw; min-width: 250px; margin: 0; border-radius: 100px; background: #27ae60; z-index: 3; transition: .3s ease-in-out; }
+.navigation__item:hover, .navigation__item:focus { color: cyan; font-size: 25px; border: none; outline: none; cursor: pointer; }
+
+.navigation__line { position: absolute; left: -20vw; height: 3px; width: 20vw; min-width: 250px; margin: 0; border-radius: 100px; background: cyan; z-index: 3; transition: .3s ease-in-out; }
+
+.about { height: 100%; }
+
+.about__container { display: -ms-flexbox; display: flex; -ms-flex-direction: column; flex-direction: column; -ms-flex-pack: center; justify-content: center; height: 100%; }
+
+.about__headline { color: transparent; -webkit-text-stroke: 2px cyan; text-shadow: 5px 10px hotpink; }
+
+.about__tags { display: -ms-flexbox; display: flex; -ms-flex-direction: row; flex-direction: row; -ms-flex-wrap: wrap; flex-wrap: wrap; -ms-flex-pack: start; justify-content: flex-start; -ms-flex-align: start; align-items: flex-start; }
+
+.about__tags .tag { margin: 10px 10px 10px 0; }
 
 /*# sourceMappingURL=style.css.map*/
