--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -6,7 +6,7 @@
     <a class="navigation__item navigation__item--two {% if page.url contains '/about' %}navigation__item--active{% endif %}" href="/about" data-gify="rick-and-morty" data-link-var="about-link">
       <div class="navigation__text">About</div>
     </a>
-    <a class="navigation__item navigation__item--three {% if page.url contains '/portfolio' %}navigation__item--active{% endif %}" href="/portfolio" data-gify="mind-blown" data-link-var="port-link">
+    <a class="navigation__item navigation__item--three {% if page.url contains '/portfolio' %}navigation__item--active{% endif %}" href="/portfolio" data-gify="fireworks" data-link-var="port-link">
       <div class="navigation__text" >Portfolio</DIV>
     </a>
     <a class="navigation__item navigation__item--four {% if page.url contains '/lab' %}navigation__item--active{% endif %}" href="/lab" data-gify="trippy" data-link-var="lab-link">
