--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,23 +119,43 @@ a { text-decoration: none; color: #fff; }
 
 .navigation__item--one.navigation__item--active ~ .navigation__line { left: 0; }
 
-.navigation__item--one:hover ~ .navigation__line { left: 0; }
+.navigation__item--one:hover ~ .navigation__line { left: 0 !important; }
 
-.navigation__item--two:hover ~ .navigation__line { left: var(--about-link); }
+.navigation__item--two:hover ~ .navigation__line { left: var(--about-link) !important; }
 
-.navigation__item--three:hover ~ .navigation__line { left: var(--port-link); }
+.navigation__item--two.navigation__item--active ~ .navigation__line { left: var(--about-link); }
 
-.navigation__item--four:hover ~ .navigation__line { left: var(--lab-link); }
+.navigation__item--three:hover ~ .navigation__line { left: var(--port-link) !important; }
 
-.navigation__item--five:hover ~ .navigation__line { left: var(--contact-link); }
+.navigation__item--three.navigation__item--active ~ .navigation__line { left: var(--port-link); }
+
+.navigation__item--four:hover ~ .navigation__line { left: var(--lab-link) !important; }
+
+.navigation__item--four.navigation__item--active ~ .navigation__line { left: var(--lab-link); }
+
+.navigation__item--five:hover ~ .navigation__line { left: var(--contact-link) !important; }
+
+.navigation__item--five.navigation__item--active ~ .navigation__line { left: var(--contact-link); }
 
 .navigation__item--active { color: cyan; }
-
-.navigation__item--active ~ .navigation__line { left: var(--about-link); }
 
 .navigation__item:hover, .navigation__item:focus { color: cyan; font-size: 25px; border: none; outline: none; cursor: pointer; }
 
 .navigation__line { position: absolute; left: -20vw; height: 3px; width: 20vw; min-width: 250px; margin: 0; border-radius: 100px; background: cyan; z-index: 3; transition: .3s ease-in-out; }
+
+.marquee__wrapper { display: -ms-flexbox; display: flex; -ms-flex-direction: column; flex-direction: column; -ms-flex-pack: start; justify-content: flex-start; min-height: 350px; text-align: center; }
+
+.marquee__headline { position: relative; color: transparent; -webkit-text-stroke: 2px cyan; padding: 20px 0; font-size: 5vw; }
+
+.marquee__headline:after { content: ''; position: absolute; left: 0; width: 100%; height: 4px; background-color: cyan; animation: bar-animation 5s infinite; }
+
+.marquee__headline:after { bottom: 0; }
+
+@keyframes bar-animation { 0% { box-shadow: 0px 0px 20px 0px hotpink; }
+  25% { box-shadow: 0px 0px 20px 2px hotpink; }
+  50% { box-shadow: 0px 0px 20px 3px hotpink; }
+  75% { box-shadow: 0px 0px 20px 2px hotpink; }
+  100% { box-shadow: 0px 0px 20px 0px hotpink; } }
 
 .about { height: 100%; }
 
