--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,7 @@ body.menu-active { overflow-y: hidden; overflow: hidden; }
 
 @media (max-width: 950px) { .container { width: auto; padding-right: 20px; padding-left: 20px; } }
 
-.main-content { position: relative; width: 100%; height: calc(100vh - 100px); background-color: #181818; }
+.main-content { position: relative; width: 100%; height: calc(100vh - 100px); background-color: #181818; overflow-y: scroll; }
 
 .tag { border-radius: 139px; padding: 1px 15px; text-transform: uppercase; background: cyan; }
 
@@ -95,7 +95,7 @@ s p { margin: 0 0 27px; font-size: 1.5em; font-family: "HKGrotesk-regular", sans
 
 a { text-decoration: none; color: #fff; }
 
-.home-marquee { height: 100%; width: 100%; background-size: 0; }
+.home-marquee { height: 100%; width: 100%; background-size: contain; background-position: center; background-repeat: no-repeat; }
 
 .home-marquee--image { background-size: contain; background-position: center; background-repeat: no-repeat; }
 
@@ -143,7 +143,9 @@ a { text-decoration: none; color: #fff; }
 
 .navigation__line { position: absolute; left: -20vw; height: 3px; width: 20vw; min-width: 250px; margin: 0; border-radius: 100px; background: cyan; z-index: 3; transition: .3s ease-in-out; }
 
-.marquee__wrapper { display: -ms-flexbox; display: flex; -ms-flex-direction: column; flex-direction: column; -ms-flex-pack: start; justify-content: flex-start; min-height: 350px; text-align: center; }
+.marquee { margin-bottom: 40px; }
+
+.marquee__wrapper { display: -ms-flexbox; display: flex; -ms-flex-direction: column; flex-direction: column; -ms-flex-pack: start; justify-content: flex-start; text-align: center; }
 
 .marquee__headline { position: relative; color: transparent; -webkit-text-stroke: 2px cyan; padding: 20px 0; font-size: 5vw; }
 
@@ -156,6 +158,26 @@ a { text-decoration: none; color: #fff; }
   50% { box-shadow: 0px 0px 20px 3px hotpink; }
   75% { box-shadow: 0px 0px 20px 2px hotpink; }
   100% { box-shadow: 0px 0px 20px 0px hotpink; } }
+
+.cards { display: -ms-flexbox; display: flex; -ms-flex-direction: row; flex-direction: row; -ms-flex-wrap: wrap; flex-wrap: wrap; -ms-grid-column-align: flex-start; justify-items: flex-start; }
+
+.card { display: -ms-flexbox; display: flex; -ms-flex-direction: column; flex-direction: column; -ms-flex-pack: center; justify-content: center; -ms-flex: 0 0 calc(99.9% * 1 / 3 - 20px); flex: 0 0 calc(99.9% * 1 / 3 - 20px); -ms-flex-preferred-size: auto; flex-basis: auto; -ms-flex-positive: 0; flex-grow: 0; -ms-flex-negative: 0; flex-shrink: 0; width: calc(99.9% * 1 / 3 - 20px); padding: 15px 20px; }
+
+.card:nth-of-type(n) { margin-right: 30px; margin-bottom: 30px; }
+
+.card:nth-of-type(3n) { margin-right: 0; }
+
+@media (max-width: 1070px) { .card { -ms-flex: 0 0 calc(99.9% * 1 / 2 - 10px); flex: 0 0 calc(99.9% * 1 / 2 - 10px); -ms-flex-preferred-size: auto; flex-basis: auto; -ms-flex-positive: 0; flex-grow: 0; -ms-flex-negative: 0; flex-shrink: 0; width: calc(99.9% * 1 / 2 - 10px); }
+  .card:nth-of-type(n) { margin-right: 20px; margin-bottom: 20px; }
+  .card:nth-of-type(2n) { margin-right: 0; } }
+
+@media (max-width: 600px) { .card { -ms-flex: 0 0 calc(99.9% * 1 / 2 - 7.5px); flex: 0 0 calc(99.9% * 1 / 2 - 7.5px); -ms-flex-preferred-size: auto; flex-basis: auto; -ms-flex-positive: 0; flex-grow: 0; -ms-flex-negative: 0; flex-shrink: 0; width: calc(99.9% * 1 / 2 - 7.5px); }
+  .card:nth-of-type(n) { margin-right: 15px; margin-bottom: 15px; }
+  .card:nth-of-type(2n) { margin-right: 0; } }
+
+.card__image { width: 100%; text-align: center; }
+
+.card__image img { max-width: 100%; max-height: 150px; }
 
 .about { height: 100%; }
 
