--- a/assets/_sass/base/_buttons.scss
+++ b/assets/_sass/base/_buttons.scss
@@ -1,4 +1,26 @@
 a {
   text-decoration: none;
   color: $color-white;
+  &.button {
+    transform: translate3d(0,0,0);
+    display: inline-block;
+    position: relative;
+    padding: 12px 30px;
+    color: #FFFFFF;
+    background-color: transparent;
+    font-size: 16px;
+    font-weight: normal;
+    line-height: 100%;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    cursor: pointer;
+    box-shadow: 3px 2px 0px 0px cyan;
+    border: 3px solid hotpink;
+    transition: all 0.4s ease-out;
+    &:hover {
+      box-shadow: 3px 2px 0px 0px hotpink;
+      border: 3px solid cyan;
+    }
+  }
 }
