--- a/assets/_sass/components/_cards.scss
+++ b/assets/_sass/components/_cards.scss
@@ -17,11 +17,27 @@
   }
   padding: 15px 20px;
   &__image {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 100%;
+    height: 100%;
     text-align: center;
+    margin-bottom: 20px;
     img {
       max-width: 100%;
       max-height: 150px;
+    }
+  }
+  &__buttons {
+    margin: auto;
+    .button {
+      width: 100%;
+      margin-bottom: 10px;
+      &:last-of-type {
+        margin-bottom: 0;
+      }
     }
   }
 }
