--- a/assets/_sass/components/_home-marquee.scss
+++ b/assets/_sass/components/_home-marquee.scss
@@ -18,7 +18,7 @@
   &__headline {
     color: transparent;
     -webkit-text-stroke: 2px cyan;
-    text-shadow: 5px 10px hotpink;
+    // text-shadow: 5px 10px hotpink;
     font-size: 50px;
   }
   &__headline-a {
@@ -30,7 +30,28 @@
   &__subhead {
     color: transparent;
     -webkit-text-stroke: 2px hotpink;
-    word-break: break-all;
+    text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #ff4444, 0 0 0.5em #ff4444, 0 0 0.1em #ff4444, 0 10px 3px #000;    word-break: break-all;
     font-size: 10vw;
+    span {
+      animation:flicker linear infinite 2s;
+      &:nth-child(2) {
+        animation:flicker alternate infinite 4s;
+      }
+      &:last-of-type {
+        animation:flicker linear infinite 3s;
+      }
+    }
   }
+}
+@keyframes flicker {
+    
+  0%, 19%, 21%, 23%, 25%, 54%, 56%, 100% {
+    
+    text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #ff4444, 0 0 0.5em #ff4444, 0 0 0.1em #ff4444, 0 10px 3px #000;
+  }
+  
+  20%, 24%, 55% {        
+      text-shadow: none;
+      box-shadow: none;
+  }    
 }
