--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,17 +95,31 @@ s p { margin: 0 0 27px; font-size: 1.5em; font-family: "HKGrotesk-regular", sans
 
 a { text-decoration: none; color: #fff; }
 
+a.button { transform: translate3d(0, 0, 0); display: inline-block; position: relative; padding: 12px 30px; color: #FFFFFF; background-color: transparent; font-size: 16px; font-weight: normal; line-height: 100%; text-align: center; text-decoration: none; text-transform: uppercase; cursor: pointer; box-shadow: 3px 2px 0px 0px cyan; border: 3px solid hotpink; transition: all 0.4s ease-out; }
+
+a.button:hover { box-shadow: 3px 2px 0px 0px hotpink; border: 3px solid cyan; }
+
 .home-marquee { height: 100%; width: 100%; background-size: contain; background-position: center; background-repeat: no-repeat; }
 
 .home-marquee--image { background-size: contain; background-position: center; background-repeat: no-repeat; }
 
 .home-marquee__container { display: -ms-flexbox; display: flex; -ms-flex-direction: column; flex-direction: column; -ms-flex-pack: center; justify-content: center; height: 100%; }
 
-.home-marquee__headline { color: transparent; -webkit-text-stroke: 2px cyan; text-shadow: 5px 10px hotpink; font-size: 50px; }
+.home-marquee__headline { color: transparent; -webkit-text-stroke: 2px cyan; font-size: 50px; }
 
 .home-marquee__headline-a { font-size: 120px; color: transparent; -webkit-text-stroke: 2px cyan; word-break: break-all; }
 
-.home-marquee__subhead { color: transparent; -webkit-text-stroke: 2px hotpink; word-break: break-all; font-size: 10vw; }
+.home-marquee__subhead { color: transparent; -webkit-text-stroke: 2px hotpink; text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #ff4444, 0 0 0.5em #ff4444, 0 0 0.1em #ff4444, 0 10px 3px #000; word-break: break-all; font-size: 10vw; }
+
+.home-marquee__subhead span { animation: flicker linear infinite 2s; }
+
+.home-marquee__subhead span:nth-child(2) { animation: flicker alternate infinite 4s; }
+
+.home-marquee__subhead span:last-of-type { animation: flicker linear infinite 3s; }
+
+@keyframes flicker { 0%, 19%, 21%, 23%, 25%, 54%, 56%, 100% { text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #ff4444, 0 0 0.5em #ff4444, 0 0 0.1em #ff4444, 0 10px 3px #000; }
+  20%, 24%, 55% { text-shadow: none;
+    box-shadow: none; } }
 
 .navigation::-webkit-scrollbar { display: none; }
 
@@ -113,7 +127,7 @@ a { text-decoration: none; color: #fff; }
 
 .navigation__container { display: -ms-flexbox; display: flex; position: relative; -ms-flex-direction: row; flex-direction: row; -ms-flex-pack: start; justify-content: flex-start; height: 100px; }
 
-.navigation__container:before { content: ''; position: absolute; top: 0; background-color: hotpink; width: 100%; min-width: calc(250px * 5); height: 4px; z-index: 2; }
+.navigation__container:before { content: ''; position: absolute; top: 0; background-color: #ff4444; width: 100%; min-width: calc(250px * 5); height: 4px; z-index: 2; }
 
 .navigation__item { display: -ms-flexbox; display: flex; -ms-flex-direction: column; flex-direction: column; -ms-flex-pack: center; justify-content: center; position: relative; -ms-flex-align: center; align-items: center; width: 20vw; min-width: 250px; font-size: 20px; background-color: #0B0B0C; color: #4b4b4b; text-transform: uppercase; transition: .3s ease-in-out; }
 
@@ -141,7 +155,7 @@ a { text-decoration: none; color: #fff; }
 
 .navigation__item:hover, .navigation__item:focus { color: cyan; font-size: 25px; border: none; outline: none; cursor: pointer; }
 
-.navigation__line { position: absolute; left: -20vw; height: 3px; width: 20vw; min-width: 250px; margin: 0; border-radius: 100px; background: cyan; z-index: 3; transition: .3s ease-in-out; }
+.navigation__line { position: absolute; left: -20vw; height: 4px; width: 20vw; min-width: 250px; margin: 0; border-radius: 100px; background: cyan; z-index: 3; transition: .3s ease-in-out; }
 
 .marquee { margin-bottom: 40px; }
 
@@ -175,9 +189,15 @@ a { text-decoration: none; color: #fff; }
   .card:nth-of-type(n) { margin-right: 15px; margin-bottom: 15px; }
   .card:nth-of-type(2n) { margin-right: 0; } }
 
-.card__image { width: 100%; text-align: center; }
+.card__image { display: -ms-flexbox; display: flex; -ms-flex-direction: column; flex-direction: column; -ms-flex-pack: center; justify-content: center; -ms-flex-align: center; align-items: center; width: 100%; height: 100%; text-align: center; margin-bottom: 20px; }
 
 .card__image img { max-width: 100%; max-height: 150px; }
+
+.card__buttons { margin: auto; }
+
+.card__buttons .button { width: 100%; margin-bottom: 10px; }
+
+.card__buttons .button:last-of-type { margin-bottom: 0; }
 
 .about { height: 100%; }
 
