--- a/assets/_sass/components/_navigation.scss
+++ b/assets/_sass/components/_navigation.scss
@@ -17,7 +17,7 @@
       content: '';
       position: absolute;
       top: 0;
-      background-color: #ff4444;
+      background-color: $color-red;
       width: 100%;
       min-width: calc(250px * 5);
       height: 4px;
@@ -86,10 +86,10 @@
       }
     }
     &--active {
-      color: cyan;
+      color: $color-green;
     }
     &:hover, &:focus {
-      color: cyan;
+      color: $color-green;
       font-size: 25px;
       border: none;
       outline: none;
