--- a/assets/_sass/settings/_variables.scss
+++ b/assets/_sass/settings/_variables.scss
@@ -80,6 +80,8 @@ $color-black: #181818;
 $color-dark-black: #0B0B0C;
 $color-gray: #4b4b4b;
 $color-green: cyan;
+$color-red: #ff4444;
+$color-pink: hotpink;
 
 
 $space-horizontal-large: 30px;
