--- a/assets/_sass/base/_shared.scss
+++ b/assets/_sass/base/_shared.scss
@@ -39,6 +39,7 @@ body {
   position: relative;
   width: 100%;
   height: calc(100vh - 100px);
+  padding-bottom: 100px;
   background-color: $color-black;
   overflow-y: scroll;
 }
