--- a/assets/_sass/components/_cards.scss
+++ b/assets/_sass/components/_cards.scss
@@ -1,21 +1,14 @@
 .cards {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-items: flex-start;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: auto;
+  grid-gap: 4px;
 }
 .card {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  @include flex-column(3, 30px, 30px);
-  @include respond-to(tablet) {
-    @include flex-column(2, 20px, 20px);
-  }
-  @include respond-to(smartphone) {
-    @include flex-column(2, 15px, 15px);
-  }
-  padding: 15px 20px;
+
   &__image {
     display: flex;
     flex-direction: column;
@@ -24,13 +17,15 @@
     width: 100%;
     height: 100%;
     text-align: center;
-    margin-bottom: 20px;
     img {
       max-width: 100%;
-      max-height: 150px;
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
     }
   }
   &__buttons {
+    display: none;
     margin: auto;
     .button {
       width: 100%;
