--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,7 @@ body.menu-active { overflow-y: hidden; overflow: hidden; }
 
 @media (max-width: 950px) { .container { width: auto; padding-right: 20px; padding-left: 20px; } }
 
-.main-content { position: relative; width: 100%; height: calc(100vh - 100px); background-color: #181818; overflow-y: scroll; }
+.main-content { position: relative; width: 100%; height: calc(100vh - 100px); padding-bottom: 100px; background-color: #181818; overflow-y: scroll; }
 
 .tag { border-radius: 139px; padding: 1px 15px; text-transform: uppercase; background: cyan; }
 
@@ -95,9 +95,9 @@ s p { margin: 0 0 27px; font-size: 1.5em; font-family: "HKGrotesk-regular", sans
 
 a { text-decoration: none; color: #fff; }
 
-a.button { transform: translate3d(0, 0, 0); display: inline-block; position: relative; padding: 12px 30px; color: #FFFFFF; background-color: transparent; font-size: 16px; font-weight: normal; line-height: 100%; text-align: center; text-decoration: none; text-transform: uppercase; cursor: pointer; box-shadow: 3px 2px 0px 0px cyan; border: 3px solid hotpink; transition: all 0.4s ease-out; }
+a.button { transform: translate3d(0, 0, 0); display: inline-block; position: relative; padding: 12px 30px; color: #FFFFFF; background-color: transparent; font-size: 16px; font-weight: normal; line-height: 100%; text-align: center; text-decoration: none; text-transform: uppercase; cursor: pointer; box-shadow: 3px 2px 0px 0px cyan; border: 3px solid #ff4444; transition: all 0.4s ease-out; }
 
-a.button:hover { box-shadow: 3px 2px 0px 0px hotpink; border: 3px solid cyan; }
+a.button:hover { box-shadow: 3px 2px 0px 0px #ff4444; border: 3px solid cyan; }
 
 .home-marquee { height: 100%; width: 100%; background-size: contain; background-position: center; background-repeat: no-repeat; }
 
@@ -109,7 +109,7 @@ a.button:hover { box-shadow: 3px 2px 0px 0px hotpink; border: 3px solid cyan; }
 
 .home-marquee__headline-a { font-size: 120px; color: transparent; -webkit-text-stroke: 2px cyan; word-break: break-all; }
 
-.home-marquee__subhead { color: transparent; -webkit-text-stroke: 2px hotpink; text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #ff4444, 0 0 0.5em #ff4444, 0 0 0.1em #ff4444, 0 10px 3px #000; word-break: break-all; font-size: 10vw; }
+.home-marquee__subhead { color: transparent; -webkit-text-stroke: 2px #ff4444; text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #ff4444, 0 0 0.5em #ff4444, 0 0 0.1em #ff4444, 0 10px 3px #000; word-break: break-all; font-size: 10vw; }
 
 .home-marquee__subhead span { animation: flicker linear infinite 2s; }
 
@@ -163,37 +163,25 @@ a.button:hover { box-shadow: 3px 2px 0px 0px hotpink; border: 3px solid cyan; }
 
 .marquee__headline { position: relative; color: transparent; -webkit-text-stroke: 2px cyan; padding: 20px 0; font-size: 5vw; }
 
-.marquee__headline:after { content: ''; position: absolute; left: 0; width: 100%; height: 4px; background-color: cyan; animation: bar-animation 5s infinite; }
+.marquee__headline:after { content: ''; position: absolute; left: 0; width: 100%; height: 4px; background-color: #ff4444; animation: bar-animation 5s infinite; }
 
 .marquee__headline:after { bottom: 0; }
 
-@keyframes bar-animation { 0% { box-shadow: 0px 0px 20px 0px hotpink; }
-  25% { box-shadow: 0px 0px 20px 2px hotpink; }
-  50% { box-shadow: 0px 0px 20px 3px hotpink; }
-  75% { box-shadow: 0px 0px 20px 2px hotpink; }
-  100% { box-shadow: 0px 0px 20px 0px hotpink; } }
+@keyframes bar-animation { 0% { box-shadow: 0px 0px 20px 0px #ff4444; }
+  25% { box-shadow: 0px 0px 20px 2px #ff4444; }
+  50% { box-shadow: 0px 0px 20px 3px #ff4444; }
+  75% { box-shadow: 0px 0px 20px 2px #ff4444; }
+  100% { box-shadow: 0px 0px 20px 0px #ff4444; } }
 
-.cards { display: -ms-flexbox; display: flex; -ms-flex-direction: row; flex-direction: row; -ms-flex-wrap: wrap; flex-wrap: wrap; -ms-grid-column-align: flex-start; justify-items: flex-start; }
+.cards { display: -ms-grid; display: grid; -ms-grid-columns: (1fr)[3]; grid-template-columns: repeat(3, 1fr); grid-auto-rows: auto; grid-gap: 4px; }
 
-.card { display: -ms-flexbox; display: flex; -ms-flex-direction: column; flex-direction: column; -ms-flex-pack: center; justify-content: center; -ms-flex: 0 0 calc(99.9% * 1 / 3 - 20px); flex: 0 0 calc(99.9% * 1 / 3 - 20px); -ms-flex-preferred-size: auto; flex-basis: auto; -ms-flex-positive: 0; flex-grow: 0; -ms-flex-negative: 0; flex-shrink: 0; width: calc(99.9% * 1 / 3 - 20px); padding: 15px 20px; }
+.card { display: -ms-flexbox; display: flex; -ms-flex-direction: column; flex-direction: column; -ms-flex-pack: center; justify-content: center; }
 
-.card:nth-of-type(n) { margin-right: 30px; margin-bottom: 30px; }
+.card__image { display: -ms-flexbox; display: flex; -ms-flex-direction: column; flex-direction: column; -ms-flex-pack: center; justify-content: center; -ms-flex-align: center; align-items: center; width: 100%; height: 100%; text-align: center; }
 
-.card:nth-of-type(3n) { margin-right: 0; }
+.card__image img { max-width: 100%; -o-object-fit: cover; object-fit: cover; width: 100%; height: 100%; }
 
-@media (max-width: 1070px) { .card { -ms-flex: 0 0 calc(99.9% * 1 / 2 - 10px); flex: 0 0 calc(99.9% * 1 / 2 - 10px); -ms-flex-preferred-size: auto; flex-basis: auto; -ms-flex-positive: 0; flex-grow: 0; -ms-flex-negative: 0; flex-shrink: 0; width: calc(99.9% * 1 / 2 - 10px); }
-  .card:nth-of-type(n) { margin-right: 20px; margin-bottom: 20px; }
-  .card:nth-of-type(2n) { margin-right: 0; } }
-
-@media (max-width: 600px) { .card { -ms-flex: 0 0 calc(99.9% * 1 / 2 - 7.5px); flex: 0 0 calc(99.9% * 1 / 2 - 7.5px); -ms-flex-preferred-size: auto; flex-basis: auto; -ms-flex-positive: 0; flex-grow: 0; -ms-flex-negative: 0; flex-shrink: 0; width: calc(99.9% * 1 / 2 - 7.5px); }
-  .card:nth-of-type(n) { margin-right: 15px; margin-bottom: 15px; }
-  .card:nth-of-type(2n) { margin-right: 0; } }
-
-.card__image { display: -ms-flexbox; display: flex; -ms-flex-direction: column; flex-direction: column; -ms-flex-pack: center; justify-content: center; -ms-flex-align: center; align-items: center; width: 100%; height: 100%; text-align: center; margin-bottom: 20px; }
-
-.card__image img { max-width: 100%; max-height: 150px; }
-
-.card__buttons { margin: auto; }
+.card__buttons { display: none; margin: auto; }
 
 .card__buttons .button { width: 100%; margin-bottom: 10px; }
 
