--- a/assets/_sass/base/_shared.scss
+++ b/assets/_sass/base/_shared.scss
@@ -42,6 +42,9 @@ body {
   padding-bottom: 100px;
   background-color: $color-black;
   overflow-y: scroll;
+  body.page-home & {
+   padding-bottom: 0; 
+  }
 }
 
 .tag {
