--- a/assets/_sass/components/_cards.scss
+++ b/assets/_sass/components/_cards.scss
@@ -1,8 +1,14 @@
 .cards {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-auto-rows: auto;
-  grid-gap: 4px;
+  grid-gap: 50px;
+  @include respond-to(tablet) {
+    grid-gap: 20px;
+  }
+  @include respond-to(smartphone) {
+    grid-gap: 10px;
+  }
 }
 .card {
   display: flex;
@@ -22,6 +28,7 @@
       object-fit: cover;
       width: 100%;
       height: 100%;
+      border-radius: 10px;
     }
   }
   &__buttons {
