--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,8 @@ body.menu-active { overflow-y: hidden; overflow: hidden; }
 
 .main-content { position: relative; width: 100%; height: calc(100vh - 100px); padding-bottom: 100px; background-color: #181818; overflow-y: scroll; }
 
+body.page-home .main-content { padding-bottom: 0; }
+
 .tag { border-radius: 139px; padding: 1px 15px; text-transform: uppercase; background: cyan; }
 
 /** Headers */
@@ -173,13 +175,17 @@ a.button:hover { box-shadow: 3px 2px 0px 0px #ff4444; border: 3px solid cyan; }
   75% { box-shadow: 0px 0px 20px 2px #ff4444; }
   100% { box-shadow: 0px 0px 20px 0px #ff4444; } }
 
-.cards { display: -ms-grid; display: grid; -ms-grid-columns: (1fr)[3]; grid-template-columns: repeat(3, 1fr); grid-auto-rows: auto; grid-gap: 4px; }
+.cards { display: -ms-grid; display: grid; -ms-grid-columns: (1fr)[2]; grid-template-columns: repeat(2, 1fr); grid-auto-rows: auto; grid-gap: 50px; }
+
+@media (max-width: 1070px) { .cards { grid-gap: 20px; } }
+
+@media (max-width: 600px) { .cards { grid-gap: 10px; } }
 
 .card { display: -ms-flexbox; display: flex; -ms-flex-direction: column; flex-direction: column; -ms-flex-pack: center; justify-content: center; }
 
 .card__image { display: -ms-flexbox; display: flex; -ms-flex-direction: column; flex-direction: column; -ms-flex-pack: center; justify-content: center; -ms-flex-align: center; align-items: center; width: 100%; height: 100%; text-align: center; }
 
-.card__image img { max-width: 100%; -o-object-fit: cover; object-fit: cover; width: 100%; height: 100%; }
+.card__image img { max-width: 100%; -o-object-fit: cover; object-fit: cover; width: 100%; height: 100%; border-radius: 10px; }
 
 .card__buttons { display: none; margin: auto; }
 
